--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "yarn run build && node ./build/index.js",
-    "build": "tsc",
+    "build": "yarn run lint && tsc",
+    "lint": "eslint . --fix",
     "test:unit": "jest",
-    "test:unit:watch": "yarn run test:unit -- --watch"
+    "test:unit:watch": "yarn run test:unit --watch"
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-typescript": "^8.0.2",
+    "eslint-plugin-import": "^2.20.2",
     "jest": "^26.0.1",
     "typescript": "^3.9.5"
   }
