Made changes so the output structure is flat while keeping jest and eslint functional.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,8 @@
     "forceConsistentCasingInFileNames": true,
   },
   "include": [
-    "./.eslintrc.js",
+    ".eslintrc.js",
     "src/**/*.ts",
-    "tests/**/*.ts"
   ],
   "exclude": [
     "node_modules",
